<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/my_top"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/frag_my_back" >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:alpha="0.1"
            android:background="#000" >
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/fgm_me_linGoods"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/c3w" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_text1"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fgm_me_linSee"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/c3w" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_text2"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fgm_me_linGuanli"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/c3w" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_text3"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/fgm_me_ivLogin"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="5dp"
                android:src="@mipmap/b6c" />

            <TextView
                android:id="@+id/fgm_me_tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/write"
                android:text="登录/注册" />
        </LinearLayout>
       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/relativeLayout3"></RelativeLayout>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@mipmap/axm"
            android:id="@+id/fgm_me_ivEWCode"
            android:layout_below="@+id/relativeLayout3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="二维码"
            android:textColor="@color/write"
            android:id="@+id/textView7"
            android:layout_alignTop="@+id/linearLayout1"
            android:layout_alignRight="@+id/fgm_me_ivEWCode"
            android:layout_alignEnd="@+id/fgm_me_ivEWCode" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#F2F3F5"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/fgm_me_linDingdan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:gravity="center_vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_text4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_text5" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/brq" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="#fff"
            android:padding="5dp"
            >

            <LinearLayout
                android:id="@+id/fgm_me_linDaiFuKuan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/c3w" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/my_text6" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fgm_me_linDaiPinJia"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/c3y" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/my_text7" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fgm_me_linTuiKuan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/c3q" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/my_text8" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fgm_me_linAddrGuanLi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/c7t" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/my_text9" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/brq" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fgm_me_linQiangHongBao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_text10"
                android:textColor="#E54155"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/brq" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_text11"
                android:textColor="#000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="#fff"
            android:padding="5dp" >

            <LinearLayout
                android:id="@+id/fgm_me_linJiFen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/c3w" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/my_text12" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fgm_me_HongBao"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/c3w" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/my_text13" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fgm_me_linYuE"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/c3w" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/my_text14" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fgm_me_linHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_text15"
                android:textColor="#000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/brq" />
        </LinearLayout>
    </LinearLayout>
    

</LinearLayout>
